@@ -41,9 +41,11 @@ Other contributors, listed alphabetically, are:
 * Laurent Gautier -- R/S lexer
 * Alex Gaynor -- PyPy log lexer
 * Alain Gilbert -- TypeScript lexer
+* Alex Gilding -- BlitzBasic lexer
 * Bertrand Goetzmann -- Groovy lexer
 * Krzysiek Goj -- Scala lexer
 * Matt Good -- Genshi, Cheetah lexers
+* Michał Górny -- vim modeline support
 * Patrick Gotthardt -- PHP namespaces support
 * Olivier Guibe -- Asymptote lexer
 * Jordi Gutiérrez Hermoso -- Octave lexer
@@ -100,6 +102,7 @@ Other contributors, listed alphabetically, are:
 * Mike Nolta -- Julia lexer
 * Jonas Obrist -- BBCode lexer
 * David Oliva -- Rebol lexer
+* Pat Pannuto -- nesC lexer
 * Jon Parise -- Protocol buffers lexer
 * Ronny Pfannschmidt -- BBCode lexer
 * Benjamin Peterson -- Test suite refactoring
